Fix screen breakpoint overlapping

--- a/templates/support/base.css
+++ b/templates/support/base.css
@@ -736,7 +736,7 @@ template {
   clip: rect(1px, 1px, 1px, 1px);
 }
 
-@media (max-width: 40em) {
+/* @media (max-width: 40em) {
   .xs-hide { display: none !important }
 }
 
@@ -750,7 +750,25 @@ template {
 
 @media (min-width: 64em) {
   .lg-hide { display: none !important }
+} */
+
+
+@media (max-width: 39.99em) {
+  .xs-hide { display: none !important }
 }
+
+@media (min-width: 40em) and (max-width: 51.99em) {
+  .sm-hide { display: none !important }
+}
+
+@media (min-width: 52em) and (max-width: 63.99em) {
+  .md-hide { display: none !important }
+}
+
+@media (min-width: 64em) {
+  .lg-hide { display: none !important }
+}
+
 
 .display-none { display: none !important }
 
